# scp_stage3_it

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  gemma4-st3.yaml  qwen3-st3.yaml  qwen35-st3.yaml  sft_gemma4_cpt_stage2.yaml  sft_qwen3_4b_cpt_stage2.yaml  sft_qwen3_5_4b_cpt_half_lr_stage2.yaml
configs/data/: parallel_wmt24pp_flores_reversed.yaml
configs/logging/: wandb.yaml
configs/model/: gemma4_cpt_stage2.yaml  gemma4_st2.yaml  qwen35_st2.yaml  qwen3_4b_cpt_stage2.yaml  qwen3_5_4b_cpt_half_lr_stage2.yaml  qwen3_st2.yaml
configs/preprocessing/: sft_translation.yaml
configs/training/: default.yaml  gpu96_sft.yaml
data/eval/: eval_120.csv
notebooks/: testcsv_3model_comet_eval_only.ipynb  testcsv_3model_translate_only.ipynb  testcsv_3model_translation_eval.ipynb
scripts/: inspect_step_data.py
src/: common.py  evaluate.py  infer_csv.py  preprocess.py  push_to_hub.py  train.py
